<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Library Mobile App</string>
    <string name="openingHours">Opening Hours</string>
    <string name="myLib_Record">My Library Record</string>
    <string name="available_computers">Available Computers</string>
    
    <string name="rmBooking">Library Room Booking System</string>
    <string name="catalogeSearch">Catalogue Search</string>
    <string name="mobileResrc">Mobile Resources</string>
    <string name="news_events">News and Events</string>
    
    
    <string name="libInfo">Library Information</string>
    <string name="openingHours">Opening Hours</string>
    <string name="libContact">Library Contact</string>

    

    <string name="keyWords">Enter Search Keywords</string>
    <string name="search">Search</string>
    
    <string name="speak">Speak</string>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <string name="application_name">ActionBarSherlock Styled</string>
    <string name="activity_name">ABS: Styled</string>

    <string name="action_label_refresh">Refresh</string>
    <string name="action_label_search">Search</string>
    <string name="action_label_both">Both</string>
    <string name="action_label_text">Text</string>
    <string name="action_label_logo">Logo</string>
    <string name="action_label_up">Up</string>
    <string name="action_label_nav_tabs">Tabs</string>
    <string name="action_label_nav_drop_down">List</string>
    <string name="action_label_nav_label">Label</string>
    <string name="action_label_nav">Navigation Mode &gt;</string>
    <string name="action_label_bak">Action Bar Background &gt;</string>
    <string name="action_label_bak_none">None</string>
    <string name="action_label_bak_gradient">Gradient</string>
    <string name="action_label_bak_image">Image</string>
    
    
    
    
    
    
    
    
    
    
    
    
    <string name="properties">SlidingMenu Properties</string>
    <string name="general">Wellcome</string>
    <string name="viewpager">ViewPager</string>
    <string name="attach">Attach</string>
    <string name="title_bar">Title Bar Options</string>
    <string name="title_bar_slide">Sliding Title Bar</string>
    <string name="title_bar_content">Sliding Content Only</string>
    <string name="animations">Custom Animations</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="what_is_this">What is this?</string>
    <string name="responsive_explanation">This is an example of a UI that responds well to device type. On phones, the menu will be placed inside a SlidingMenu, while on tablets the menu will be exposed alongside the content because we have enough room to always show it.</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    <string name="about_msg">&lt;b>CUHK Lib&lt;/b> is an CUHK library app 
        that can empower CUHK peers in finding the information they need more effectively, 
        and help the library outreach to more potential users.
        &lt;br>&lt;br>
        </string>
    <string name="apache_license">&lt;b>SlidingMenu &lt;/b>&lt;br>
        \u00A9 2012 Jeremy Feinstein&lt;br>
        SlidingMenu is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
        &lt;b>ActionBarSherlock &lt;/b>&lt;br>
        \u00A9 2012 Jake Wharton&lt;br>
        ActionBarSherlock is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
		&lt;b>The Apache License Version 2.0&lt;/b>&lt;br>
		You may obtain a copy of the License at&lt;br>
		&lt;center>&lt;a href=\'http://www.apache.org/licenses/LICENSE-2.0\'>
				"http://www.apache.org/licenses/LICENSE-2.0&lt;/a>&lt;/center>&lt;br>
		Unless required by applicable law or agreed to in writing, 
		software distributed under the License is distributed on an 
		\'AS IS\' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
		either express or implied. See the License for the specific 
		language governing permissions and limitations under the License.</string>
    <string name="no_email">Sorry, I couldn\'t find any e-mail apps on your phone</string>

</resources>